# weenat_test

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  coverage.ini  docker-entrypoint.sh  generate_secret_key.py  pyproject.toml
config/: settings.py  urls.py
metrics/: models.py  serializers.py  urls.py  views.py
metrics/migrations/: 0001_initial.py
metrics/tests/: test_models.py  test_serializers.py  test_views.py
